Fix broken styles by Cron

--- a/src/resources/styles/_overrides.scss
+++ b/src/resources/styles/_overrides.scss
@@ -280,3 +280,7 @@ pre {
 .apexcharts-datalabels.legend-mouseover-inactive {
     opacity: 1 !important;
 }
+
+.cron_builder {
+    max-width: 700px !important;
+}
